# mirea-test-session-bot

./: .gitignore  Dockerfile  README.md  config.py  decode.py  docker-compose.yml  main.py  pyproject.toml  semester_start.py
data/: exams.json  test_session.json
